Refactor "About Elisa" dialog to use Kirigami Addons

BUG: 439781